--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "author": "mrcjbradley <cjbradley@me.com>",
   "license": "MIT",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/free-regular-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
     "babel-preset-es2015": "^6.24.1",
@@ -21,5 +26,6 @@
   "scripts": {
     "build": "webpack -p",
     "dev": "webpack-dev-server --hot --inline"
-  }
+  },
+  "dependencies": {}
 }
