--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "build": "webpack -p",
     "dev": "webpack-dev-server --hot --inline"
   },
-  "dependencies": {}
+  "dependencies": {
+    "highlight.js": "^9.15.6",
+    "prismjs": "^1.16.0"
+  }
 }
