--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
@@ -30,7 +31,9 @@
     "sassify": "node-sass --watch src/styles -o src/css"
   },
   "dependencies": {
+    "@babel/core": "^7.4.5",
     "highlight.js": "^9.15.6",
-    "prismjs": "^1.16.0"
+    "prismjs": "^1.16.0",
+    "save": "^2.4.0"
   }
 }
